# mcp_db_transactions

./: .env.example  .gitignore  Python  README.md  mcp_server.py  pyproject.toml  requirements.txt  schema.sql  skills-lock.json  streamlit_app.py
.claude/skills/: developing-with-streamlit  gradio
.claude/skills/payment-txn-db-schema/: SKILL.md
.junie/skills/: huggingface-gradio
.streamlit/: config.toml
deploy/: README.md  nginx-transaction-analysis.conf  transaction-analysis.service
policies/: README.md  authstattab_fields.md  business_rules.md  int_control_tab_fields.md  int_detail_tab_fields.md  table_relationships.md  tranlogtab_fields.md
scripts/: add_region_column.py  chat.py  ingest_policies.py  seed_db.py  ui.py
src/agent/: __init__.py  config.py  db.py  graph.py  ingest.py  inspect_db.py  logger.py  models.py  prompts.py  state.py  text_utils.py
src/agent/nodes/: compose.py  execute.py  retrieve.py  route.py  understand.py
src/agent/tools/: __init__.py  db_tools.py
temp/: uninstall_hf.sh
